--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,42 @@
 /*  your css code here. If applicable */
+/*  your css code here. If applicable */
+.container{
+	width:100%;
+	height:100%;
+	background-color:rgb(204, 204, 204);
+}
+h1{
+	text-align:center;
+}
+.playlist{
+	width:80%;
+	padding:15px;
+	background-color:white;
+	border:1px solid black;
+	border-radius:10px
+}
+li{
+			list-style-type: none;
+	        text-decoration-line: none;
+}
+h2{
+	text-align:center;
+}
+.car{
+	background-color:white;
+	width:70vw;
+	border:1px solid black;
+	border-radius:10px;
+}
+img{
+	padding:10px;
+	
+}
+.player_one{
+background-color: rgb(255, 255, 255);
+	padding:10px;
+	border-radius:5px;
+}
+.player_two{
+	width:70vw;
+}
