--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 /*  your css code here. If applicable */
-/*  your css code here. If applicable */
 .container{
 	width:100%;
 	height:100%;
@@ -14,6 +13,10 @@ h1{
 	background-color:white;
 	border:1px solid black;
 	border-radius:10px
+}
+a{
+	text-decoration-line:none;
+	color:black;
 }
 li{
 			list-style-type: none;
@@ -33,10 +36,16 @@ img{
 	
 }
 .player_one{
-background-color: rgb(255, 255, 255);
+	background-color: rgb(255, 255, 255);
 	padding:10px;
 	border-radius:5px;
 }
+p{
+	padding-left:30px;
+}
 .player_two{
-	width:70vw;
+	background-color: rgb(255, 255, 255);
+	padding:2px;
+	border-radius:5px;
+	width:65vw;
 }
